--- a/src/MvcMovie/Views/MvcMovies/Details.cshtml
+++ b/src/MvcMovie/Views/MvcMovies/Details.cshtml
@@ -60,6 +60,12 @@
             }
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => @model.Info.Plot)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => @model.Info.Plot)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => @model.Info.ImageUrl)
         </dt>
         <dd class="col-sm-10">
@@ -70,6 +76,5 @@
     </dl>
 </div>
 <div>
-    @*<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |*@
     <a asp-action="Index">Back to List</a>
 </div>
